# sphere_3d_engine

./: .coveragerc  .gitignore  LICENSE-MIT  README.md  README.rst  config-overrides.js  index.css  index.html  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
public/: index.html  manifest.json
src/: App.tsx  Shader.tsx  ShaderedApp.tsx  index.css  index.ts  index.tsx
src/components/: CameraTab.tsx  LightTab.tsx  SphereModal.tsx  SphereTab.tsx
src/components/GithubCorner/: index.tsx  styles.css
src/components/WithShader/: CameraTab.tsx  LightTab.tsx  SphereModal.tsx  SphereTab.tsx
src/components/WithoutShader/: CameraTab.tsx  LightTab.tsx  SphereModal.tsx  SphereTab.tsx
src/constants/: index.ts
src/contexts/: Scene.tsx  ShaderScene.tsx
src/objects/: Camera.ts  Light.ts  Sphere.ts
src/scketches/: P5Interface.ts  P5Interface.tsx  ShaderedScketch.tsx  testSketch.ts
src/scketches/shaderTest/: shaderTest.ts  shaders.ts
src/scketches/shaders/: ShaderTest.tsx  flatShading.frag  flatShading.vert  gouraud.frag  gouraud.vert  index.ts  shader.frag
src/scketches/test/: ShaderTest.tsx  onecolor.vert.glsl  shader.frag  test.ts
src/utils/: GT.ts  drawAxonometricFace.ts  drawFace.ts  drawPerspectiveFace.ts  generateSquare.ts  math.ts  normalCalc.ts  pipe.ts  rotatePoint.ts
src/utils/withShader/: drawAxonometricFace.ts  drawFace.ts  drawPerspectiveFace.ts
src/utils/withoutShader/: drawAxonometricFace.ts  drawFace.ts  drawPerspectiveFace.ts  getInterpolatedVertex.ts
