[metadata]
name = 'sphere_3d_engine'
version = '0.0.1'
description = 'A 3d spheres engine'
author = 'Pablo Alessandro Santos Hugen'
author_email = 'pablohuggem@gmail.com'
license = 'MIT'
url = 'https://github.com/_/sphere_3d_engine'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'

[project]
dependencies = ['freeglut', 'gcc']
